--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,5 +60,12 @@
 
             </LinearLayout>
         </LinearLayout>
-
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_addition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/icon_add"
+            android:layout_margin="16dp"
+            android:backgroundTint="#231f20" />
 </android.support.design.widget.CoordinatorLayout>
