--- a/app/src/main/res/layout/begin_page.xml
+++ b/app/src/main/res/layout/begin_page.xml
@@ -3,15 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srcCompat="@drawable/begin_page"
-        android:scaleType="fitXY" />
-
+    android:layout_height="match_parent"
+    android:background="#333">
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
