--- a/app/src/main/res/layout/addcontact_page.xml
+++ b/app/src/main/res/layout/addcontact_page.xml
@@ -216,6 +216,15 @@
                 </android.support.v7.widget.CardView>
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            app:backgroundTint="#333344"
+            app:rippleColor="#000"
+            android:src="@drawable/icon_right"/>
     </android.support.design.widget.CoordinatorLayout>
 
 </android.support.v4.widget.DrawerLayout>
