--- a/app/src/main/res/layout/page_message_and_call.xml
+++ b/app/src/main/res/layout/page_message_and_call.xml
@@ -6,18 +6,28 @@
     android:layout_height="match_parent"
     android:background="#eee"
     android:orientation="vertical">
-<android.support.design.widget.TabLayout
-    android:id="@+id/tabLayout"
-    app:tabGravity="fill"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:tabMode="fixed"/>
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#eee">
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        app:tabGravity="fill"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#eee"
+        app:tabMode="fixed"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#ffffff"/>
+        android:layout_height="608dp"
+        android:layout_gravity="bottom"
+        android:background="#ffffff" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_contact"
         android:layout_width="wrap_content"
@@ -27,4 +37,5 @@
         app:backgroundTint="#313141"
         app:rippleColor="#224"
         android:src="@drawable/fbutton_contact"/>
+
 </android.support.design.widget.CoordinatorLayout>
