--- a/app/src/main/res/layout/item_mc.xml
+++ b/app/src/main/res/layout/item_mc.xml
@@ -9,15 +9,16 @@
     <FrameLayout
         android:id="@+id/line_day"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="30dp"
         android:visibility="gone">
 
         <ImageView
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center"
             app:srcCompat="@android:color/darker_gray" />
 
         <TextView
@@ -25,11 +26,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="#111"
             android:text="10月5日"
             android:background="#eee"/>
     </FrameLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -49,13 +51,15 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_name_mc"
-                android:layout_width="250dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:text="Name"
                 android:textColor="#222"
@@ -63,9 +67,10 @@
 
             <TextView
                 android:id="@+id/tv_info_mc"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:text="来电"
                 android:textSize="12sp" />
@@ -73,18 +78,19 @@
         </LinearLayout>
 
         <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right">
 
             <TextView
                 android:id="@+id/tv_time_mc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
+                android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:text="11:30"
                 android:textSize="12sp" />
         </FrameLayout>
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
