--- a/app/src/main/res/layout/item_mc.xml
+++ b/app/src/main/res/layout/item_mc.xml
@@ -32,6 +32,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/fl_click"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -87,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
+                android:layout_margin="15dp"
                 android:text="11:30"
                 android:textSize="12sp" />
         </FrameLayout>
