--- a/app/src/main/res/layout/item_contacts.xml
+++ b/app/src/main/res/layout/item_contacts.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
     android:paddingTop="5dp"
-    android:background="#eee">
+    android:background="#fff">
 
     <LinearLayout
         android:id="@+id/liner_line"
