--- a/app/src/main/res/layout/item_mc.xml
+++ b/app/src/main/res/layout/item_mc.xml
@@ -3,21 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#eee"
     android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/line_day"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:visibility="gone">
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp">
 
         <ImageView
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:layout_gravity="center"
             app:srcCompat="@android:color/darker_gray" />
 
@@ -26,22 +24,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="15dp"
             android:textColor="#111"
-            android:text="10月5日"
-            android:background="#eee"/>
+            android:background="#fff"/>
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/fl_click"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_first_letter"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/icon_first_name"
             android:gravity="center"
             android:text="L"
@@ -52,16 +51,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="95dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_name_mc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
                 android:text="Name"
                 android:textColor="#222"
                 android:textSize="17sp" />
@@ -71,27 +68,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:layout_gravity="center"
-                android:gravity="center"
                 android:text="来电"
                 android:textSize="12sp" />
 
         </LinearLayout>
 
-        <FrameLayout
+        <TextView
+            android:id="@+id/tv_time_mc"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="right">
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="12dp"
+            android:text="11:30"
+            android:textSize="12sp"
+            android:textColor="#334"/>
 
-            <TextView
-                android:id="@+id/tv_time_mc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="15dp"
-                android:text="11:30"
-                android:textSize="12sp" />
-        </FrameLayout>
     </FrameLayout>
 
 </LinearLayout>
