--- a/app/src/main/res/layout/page_contacts_list.xml
+++ b/app/src/main/res/layout/page_contacts_list.xml
@@ -6,63 +6,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="#eee">
+    android:background="#fff">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#eee">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <SearchView
-            android:id="@+id/sv_search"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:background="#eee"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:queryHint="请输入搜索内容" />
-    </android.support.design.widget.AppBarLayout>
+            android:layout_height="wrap_content"
+            android:background="#eee">
+
+            <SearchView
+                android:id="@+id/sv_search"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="#334"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:queryHint="请输入搜索内容"
+                android:searchIcon="@drawable/icon_search" />
+        </android.support.design.widget.AppBarLayout>
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:baselineAligned="false"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-                <android.support.v4.widget.SwipeRefreshLayout
-                    android:id="@+id/swipe_refresh"
-                    android:layout_marginTop="45dp"
-                    android:layout_width="match_parent"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
-                <ListView
-                    android:id="@+id/lv_contacts"
-                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ListView
+                        android:id="@+id/lv_contacts"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:divider="@null"
+                        android:scrollbars="none" />
+
+                    <android.support.v4.widget.SwipeRefreshLayout
+                        android:id="@+id/swipe_refresh"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                    </android.support.v4.widget.SwipeRefreshLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/catalog"
+                    android:layout_width="15dp"
                     android:layout_height="match_parent"
-                    android:divider="@null"
-                    android:scrollbars="none" />
-                </android.support.v4.widget.SwipeRefreshLayout>
+                    android:orientation="vertical"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="3dp"
+                    android:paddingRight="3dp"
+                    android:layout_marginTop="50dp">
+
+                </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/catalog"
-                android:layout_width="15dp"
-                android:layout_height="match_parent"
-                android:background="#eee"
-                android:orientation="vertical"
-                android:paddingBottom="5dp"
-                android:paddingLeft="3dp"
-                android:paddingRight="3dp"
-                android:layout_marginTop="50dp">
+    </LinearLayout>
 
-            </LinearLayout>
-        </LinearLayout>
-        <android.support.design.widget.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_addition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
