--- a/app/src/main/res/layout/page_dial.xml
+++ b/app/src/main/res/layout/page_dial.xml
@@ -4,24 +4,44 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_contact"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
+        android:background="#223"
         android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/et_phone"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:inputType="phone"
-            android:textSize="40sp" />
+            android:background="#445"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp">
+            <EditText
+                android:id="@+id/et_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="#445"
+                android:textColor="#fff"
+                android:inputType="phone"
+                android:textSize="35sp" />
+        </FrameLayout>
+
 
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_margin="20dp">
+            android:layout_marginBottom="10dp">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -30,9 +50,9 @@
                 <Button
                     android:id="@+id/one"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="1"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -40,9 +60,9 @@
                 <Button
                     android:id="@+id/two"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="2"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -50,9 +70,9 @@
                 <Button
                     android:id="@+id/three"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="3"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -65,9 +85,9 @@
                 <Button
                     android:id="@+id/four"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="4"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -75,9 +95,9 @@
                 <Button
                     android:id="@+id/five"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="5"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -85,9 +105,9 @@
                 <Button
                     android:id="@+id/six"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="6"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -100,9 +120,9 @@
                 <Button
                     android:id="@+id/seven"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="7"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -110,9 +130,9 @@
                 <Button
                     android:id="@+id/eight"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="8"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -120,9 +140,9 @@
                 <Button
                     android:id="@+id/nine"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="9"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -135,9 +155,9 @@
                 <Button
                     android:id="@+id/xin"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="*"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -145,9 +165,9 @@
                 <Button
                     android:id="@+id/zero"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="0"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -155,9 +175,9 @@
                 <Button
                     android:id="@+id/jin"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_height="50dp"
                     android:layout_margin="5dp"
-                    android:background="@drawable/button_number"
+                    android:background="#334"
                     android:text="#"
                     android:textColor="#fff"
                     android:textSize="30sp" />
@@ -169,22 +189,29 @@
 
                 <Button
                     android:id="@+id/call_in"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_margin="5dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:background="@drawable/button_call_push" />
 
                 <Button
                     android:id="@+id/pack_up"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_margin="5dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:background="@drawable/button_finish" />
+
                 <Button
                     android:id="@+id/delete"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_margin="5dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:background="@drawable/button_del" />
             </TableRow>
         </TableLayout>
